# JM-orderbook-analysis

./: .gitignore  README.md  pyproject.toml
irc_watcher/: main.py
src/: dataframe.py  exploratory_analysis.py.ipynb  fees.ipynb  main.py  plot.py  snapshot.py
src/analysis/: fees.py
src/preprocessing/: dataframe.py  snapshot.py  utils.py
src/visualisations/: fees.py  plot.py
test/: conftest.py  test_extended_snapshot_data.py  test_snapshot_processing.py  test_visualisations.py
