[tool.poetry]
name = "jmorderbookanalytics"
version = "0.1.0"
description = ""
authors = ["David Rajnoha <drajnoha@seznam.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"
jupyter = "^1.1.1"
pandas = "^2.2.3"
seaborn = "^0.13.2"
pytest = "^8.3.5"
setuptools = "^78.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
